# oc-cg-p10

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
project/: admin.py  models.py  permissions.py  serializers.py  views.py
project/migrations/: 0001_initial.py  0002_remove_project_contributors_project_contributors.py  0003_alter_project_author_issue.py  0004_comment.py
user/: admin.py  models.py  permissions.py  serializers.py  views.py
user/migrations/: 0001_initial.py  0002_contributor.py  0003_alter_contributor_project.py
